# Json_Search_GTK_RS

./: Cargo.toml  README.md
src/: AppGUI.glade  AppGUI.glade~  AppGUI2.glade  AppGUI2.glade~  MarketTransaction_read.rs  MarketTransaction_structure.rs  SecuritizationProgram_read.rs  SecuritizationProgram_structure.rs  SecurityPosition_read.rs  SecurityPosition_structure.rs  call_pool_structure.rs  credit_contract_read.rs  credit_contract_structure.rs  crm_read.rs  crm_structure.rs  main.rs  pool_read.rs  pool_structure.rs  return_pool_structure.rs  serde_untagged_optional.rs
