[package]
name = "json-search"
version = "0.1.0"
authors = ["regisd11 <regisdupin1109@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.1"
serde_json = "1.0.57"
serde = "1.0.115"
serde_derive = "1.0.115"
gtk-source-sys = "0.10.0"
sourceview = "0.9.0"
gtk = {version = "0.9.0", features = ["v3_22"]}
rayon = "1.3.1"
itertools = "0.9.0"

[dependencies.gio]
version = ""
features = ["v2_44"]